--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ CLIENT_ID=Qm7vsI6sXbrdFJeNcTxWhk0rTvoKzM9W
 CLIENT_SECRET=1YLB-84OWPypvflKSmBOQZ1m1CDdRODAA58lNcmtcYjc-ncdhOp8sGTD-bJQUYuq
 AUDIENCE=https://myapp.com/api
 SECRET=s$6D@K3m!5l9q#9xP2T&rJ7W@z$L1
-BASE_URL=https://web2-l1.onrender.com/callback
+BASE_URL=https://web2-l1.onrender.com
