--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ DATABASE_URL=postgresql://ticketprojekt_user:81ubIAA0Hl7FItntWUGs8oP0od82Jog0@dp
 AUTH0_DOMAIN=dev-t1lg5mupekaecrjv.us.auth0.com
 CLIENT_SECRET=1YLB-84OWPypvflKSmBOQZ1m1CDdRODAA58lNcmtcYjc-ncdhOp8sGTD-bJQUYuq
 AUDIENCE=https://myapp.com/api
+SECRET=s$6D@K3m!5l9q#9xP2T&rJ7W@z$L1
