--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ AUTH0_DOMAIN=dev-t1lg5mupekaecrjv.us.auth0.com
 CLIENT_SECRET=1YLB-84OWPypvflKSmBOQZ1m1CDdRODAA58lNcmtcYjc-ncdhOp8sGTD-bJQUYuq
 AUDIENCE=https://myapp.com/api
 SECRET=s$6D@K3m!5l9q#9xP2T&rJ7W@z$L1
+clientID=Qm7vsI6sXbrdFJeNcTxWhk0rTvoKzM9W
