--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ CLIENT_SECRET=1YLB-84OWPypvflKSmBOQZ1m1CDdRODAA58lNcmtcYjc-ncdhOp8sGTD-bJQUYuq
 AUDIENCE=https://myapp.com/api
 SECRET=s$6D@K3m!5l9q#9xP2T&rJ7W@z$L1
 clientID=Qm7vsI6sXbrdFJeNcTxWhk0rTvoKzM9W
+AUTH0_ISSUER_BASE_URL=https://dev-t1lg5mupekaecrjv.us.auth0.com/
